--- a/EmpireDirectory/Views/Home/Index.cshtml
+++ b/EmpireDirectory/Views/Home/Index.cshtml
@@ -4,9 +4,9 @@
         <div class="col-md-3">
             <a href=""><img class="img-responsive" style="height:200px; width:200px;" src="@Model.FeauturedCharacter.Image"></a>
         </div>
-        <div class="col-md-9" style="text-align:center; font-size:large">
-            "@Model.FeauturedCharacter.Quote"
-            - @Model.FeauturedCharacter.Name
+        <div class="col-md-9" style="text-align:center">
+            <h3>"@Model.FeauturedCharacter.Quote"</h3>
+            <h5>- @Model.FeauturedCharacter.Name</h5>
         </div>
     </div>
 </div>
