Bounty Hunter Partial

--- a/EmpireDirectory/Views/Home/Details.cshtml
+++ b/EmpireDirectory/Views/Home/Details.cshtml
@@ -15,9 +15,9 @@
             {
                 @Html.Partial("_JediPartial", (EmpireDirectory.Models.Jedi)Model);
             }
-            else if (Model.GetType().ToString() == "EmpireDirectory.Models.BountyHunder")
+            else if (Model.GetType().ToString() == "EmpireDirectory.Models.BountyHunter")
             {
-
+                @Html.Partial("_BountyHunterPartial", (EmpireDirectory.Models.BountyHunter)Model);
             }
         </div>
     </div>
