--- a/EmpireDirectory/Views/Home/Details.cshtml
+++ b/EmpireDirectory/Views/Home/Details.cshtml
@@ -19,6 +19,7 @@
             {
                 @Html.Partial("_BountyHunterPartial", (EmpireDirectory.Models.BountyHunter)Model);
             }
+            <a class="btn btn-sm btn-primary" href="/Home/Edit/@Model.ID">Edit</a>
         </div>
     </div>
 </div>
