--- a/EmpireDirectory/Views/Home/_JediPartial.cshtml
+++ b/EmpireDirectory/Views/Home/_JediPartial.cshtml
@@ -1,4 +1,4 @@
 ﻿@model EmpireDirectory.Models.Jedi
-
-<h2> Jedi Properties </h2>
+<h5>Rank: @Model.Rank</h5>
 <h5>Lightsaber: @Model.LightSaber</h5>
+<h5>Force: @Model.Force</h5>
