--- a/EmpireDirectory/Views/Home/Edit.cshtml
+++ b/EmpireDirectory/Views/Home/Edit.cshtml
@@ -37,5 +37,8 @@ else if (Model.GetType().ToString() == "EmpireDirectory.Models.BountyHunter")
     @Html.Partial("_BountyHunterEdit", (EmpireDirectory.Models.BountyHunter)Model);
 }
 
-<input type="submit" value="Save" class="btn btn-primary pull-right" /><br />
+<input type="submit" value="Save" class="btn btn-primary pull-right" />
+</form>
+<form method="post" action="/Home/Delete/@Model.ID">
+    <input type="submit" value="Delete" class="btn btn-primary pull-right" /><br />
 </form>
